samples/_failures_safe/1761544606_0acb48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_058bac78.c: In function ‘prim’:
./samples/SAFE/__tmp_058bac78.c:183: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_058bac78.c:182:5: error: expected declaration or statement at end of input
  182 |     if
      |     ^~
